Dark Mode Fix

--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -50,7 +50,6 @@
         --background-alt: #252525;
         --background-alt2: #252525;
         --background-alt3: #161616;
-        --border: #707070;
         --transparent-bg: rgba(0,0,0,0.8);
     }
     img {
